--- a/style.css
+++ b/style.css
@@ -1,55 +1,54 @@
-.container {
-  display: inline-grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 5fr 1fr;
-  gap: 15px 15px;
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
-.container>div {
-  border: 0 solid black;
-  border-radius: 15px;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
+  text-align: center;
+  height: 100%;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.container div {
   padding: 15px;
+  font-size: 32px;
+  font-family: Helvetica;
+  font-weight: bold;
+  color: white;
+  border-radius: 15px;
 }
 
 .header {
-  grid-column: 1 / span 2;
-  grid-row: 1 / span 1;
-  background-color: #fede2d;
-}
-
-.nav {
-  grid-column: 1 / span 2;
-  grid-row: 2 / span 1;
-  background-color: #26dcfc;
-}
-
-.article {
-  grid-column: 2 / span 1;
-  grid-row: 3 / span 1;
-  background-color: #bccbde;
+  background-color: #FFDE22;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
-  grid-column: 1 / span 1;
-  grid-row: 3 / span 1;
-  background-color: #fa7654;
+  background-color: #FF7755;
+  grid-row: 2 / 4;
+}
+
+.navbar {
+  background-color: #00DDFF;
+}
+
+.article {
+  background-color: #bccbde;
+}
+
+.article p {
+  font-size: 18px;
+  font-family: sans-serif;
+  color: white;
+  text-align: left;
 }
 
 .footer {
-  grid-column: 1 / span 2;
-  grid-row: 4 / span 1;
   background-color: #393f4d;
-}
-
-.container>div>h1 {
-  text-align: center;
-  justify-content: center;
-  color: white;
-}
-
-.container > div>p{
-  color: white;
-  font-style: 28px;
-  font-weight: bold;
-  padding: 10px;
+  grid-column: 1 / 3;
 }
